[tool.poetry]
name = "treex"
version = "0.6.12"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cgarciae/treex"
homepage = "https://cgarciae.github.io/treex"

[[tool.poetry.source]]
name = "torch"
url = "https://eternalphane.github.io/pytorch-pypi/"
secondary = true

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
flax = ">=0.4.0"
PyYAML = ">=6.0"
rich = ">=11.2.0"
optax = ">=0.1.1"
einops = ">=0.4.0"
treeo = "^0.0.10"
certifi = ">=2021.10.8"


[tool.poetry.dev-dependencies]
jax = ">=0.3.1"
jaxlib = ">=0.3.0"
pytest = ">=7.0.1"
jupyterlab = ">=3.2.9"
hypothesis = ">=6.37.1"
pre-commit = ">=2.17.0"
isort = ">=5.10.1"
mkdocs = ">=1.2.3"
mkdocstrings = ">=0.18.0"
mkdocs-material = ">=8.2.1"
einops = ">=0.4.0"
torch = "1.9.1+cpu"
torchmetrics = "^0.7.2"
cloudpickle = ">=2.0.0"
dm-haiku = ">=0.0.6"
pytest-cov = ">=3.0.0"
tensorflow-cpu = ">=2.8.0"
datasets = ">=1.18.3"
typer = ">=0.4.0"
mkdocs-jupyter = {version="^0.20.0", python=">=3.7.1"}
black = "22.10.0"
setuptools = "^65.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
